fix image width on small screens

--- a/t/public/css/liteblog.css
+++ b/t/public/css/liteblog.css
@@ -222,5 +222,6 @@ section#main-page {
 
     img {
         max-width: 100%;
+        margin: auto;
     }
 }
